--- a/templates/rgon-proxy/0/rancher-compose.yml
+++ b/templates/rgon-proxy/0/rancher-compose.yml
@@ -4,12 +4,12 @@
   description: "An rancher nginx letsencrypt proxy service" # Description of the versioned template of the Catalog Entry
   uuid: rgon-proxy-1 # Unique identifier to be used for upgrades. Please see note.
   questions:
-    - variable: path-dir
-      description: "Directory on the filesystem"
-      label: "Path Directory"
+    - variable: config-path
+      description: "Directory on the filesystem for the configuration (DO NOT USE VOLUMES)"
+      label: "Config Path Directory"
       type: "string"
       required: true
-      default: "/var/rgon-proxy-config/"
+      default: "/var/rgon-proxy-config"
 
 nginx:
   scale: 1
