Used _ instead of -

--- a/templates/rgon-proxy/0/docker-compose.yml
+++ b/templates/rgon-proxy/0/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     stdin_open: true
       - 443:443/tcp
     volumes:
-      - ${config-path}/htpasswd:/etc/nginx/htpasswd
-      - ${config-path}/conf:/etc/nginx/conf.d
-      - ${config-path}/vhost:/etc/nginx/vhost.d
-      - ${config-path}/certs:/etc/nginx/certs
+      - ${config_path}/htpasswd:/etc/nginx/htpasswd
+      - ${config_path}/conf:/etc/nginx/conf.d
+      - ${config_path}/vhost:/etc/nginx/vhost.d
+      - ${config_path}/certs:/etc/nginx/certs
     labels:
       io.rancher.sidekicks: rgon-proxy
       io.rancher.scheduler.global: 'false'  # true for multi-host
@@ -31,7 +31,7 @@ services:
     ports:
       - 402:402/tcp
     volumes:
-      - ${config-path}/rancher-gen:/etc/rancher-gen
+      - ${config_path}/rancher-gen:/etc/rancher-gen
     links:
       - nginx
     labels:
