Adding variables for email and API

--- a/templates/rgon-proxy/0/docker-compose.yml
+++ b/templates/rgon-proxy/0/docker-compose.yml
@@ -49,4 +49,6 @@ services:
         max-file: "5"
     environment:
       RGEN_CONFIG_ONETIME: '/etc/rancher-gen/default/rancher-gen-onetime.cfg'
+      ACME_EMAIL: ${ACME_EMAIL}
+      ACME_API: ${ACME_API}
     command: "-config /etc/rancher-gen/default/rancher-gen.cfg"
