Adding LE TOS agreement question

--- a/templates/rgon-proxy/0/docker-compose.yml
+++ b/templates/rgon-proxy/0/docker-compose.yml
@@ -51,3 +51,4 @@ services:
       RGEN_CONFIG_ONETIME: '/etc/rancher-gen/default/rancher-gen-onetime.cfg'
       ACME_EMAIL: ${ACME_EMAIL}
       ACME_API: ${ACME_API}
+      ACME_AGREE_TOS: ${ACME_AGREE_TOS}
