--- a/templates/rgon-proxy/1/rancher-compose.yml
+++ b/templates/rgon-proxy/1/rancher-compose.yml
@@ -1,6 +1,6 @@
 .catalog:
   name: "rgon-proxy" # Name of the versioned template of the Catalog Entry
-  version: "v0.0.2-rancher1" # Version of the versioned template of the Catalog Entry
+  version: "v0.0.3-rancher1" # Version of the versioned template of the Catalog Entry
   description: "An rancher nginx letsencrypt proxy service" # Description of the versioned template of the Catalog Entry
   uuid: rgon-proxy-1 # Unique identifier to be used for upgrades. Please see note.
   questions:
@@ -31,4 +31,8 @@
 nginx:
   scale: 1
 rgon-proxy:
+  scale: 1
+fs-server:
+  scale: 1
+fs-client:
   scale: 1
